<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 - present Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tabCourses"
        android:enabled="true"
        android:icon="@drawable/vd_courses"
        android:title="@string/courses"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/tabWeek"
        android:enabled="true"
        android:icon="@drawable/vd_calendar_month"
        android:title="@string/week"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/tabAlerts"
        android:enabled="true"
        android:icon="@drawable/vd_alert"
        android:title="@string/alerts"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

</menu>
