<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/title"
        style="?android:dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="6dp"
        android:textColor="@color/canvasTextDark"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Course grade below" />

    <EditText
        android:id="@+id/threshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:hint="@string/enterThreshold"
        android:inputType="number" />

    <TextView
        android:id="@+id/inputSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/threshold"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        tools:text="0/3" />

    <TextView
        android:id="@+id/cancel"
        style="?android:buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/inputSize"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="?attr/colorAccent"
        tools:text="CANCEL" />

    <TextView
        android:id="@+id/never"
        style="?android:buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputSize"
        android:layout_centerHorizontal="true"
        android:text="@string/never"
        android:textAllCaps="true"
        android:textColor="?attr/colorAccent"
        tools:text="NEVER" />

    <TextView
        android:id="@+id/save"
        style="?android:buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/inputSize"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="?attr/colorAccent"
        tools:text="SAVE" />

</RelativeLayout>