<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/canvasBackgroundWhite">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/parent_colorPrimary"
        app:theme="@style/ToolBarStyle"
        app:popupTheme="@style/ToolBarPopupStyle"
        android:elevation="@dimen/elevation">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/toolbar_title_width"
            android:singleLine="true"
            android:ellipsize="end"
            style="@style/TextStyle.Primary"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/canvasBackgroundWhite"
        android:layout_below="@+id/toolbar">

        <ScrollView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarStyle="outsideOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_access_time_grey600"
                        android:contentDescription="@string/time"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/date1"
                            style="@style/TextStyle.Primary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/eventIconGray" />

                        <TextView
                            android:id="@+id/date2"
                            style="@style/TextStyle.Primary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/eventIconGray"
                            android:layout_marginTop="8dp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_place_grey600"
                        android:contentDescription="@string/location"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/address1"
                            style="@style/TextStyle.Primary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/eventIconGray" />

                        <TextView
                            android:id="@+id/address2"
                            style="@style/TextStyle.Primary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/eventIconGray"
                            android:layout_marginTop="8dp"/>

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/listPreferredItemHeight">

                    <TextView
                        style="@style/TextStyle.Secondary.Dark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_reminder"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:paddingEnd="@dimen/standard_margin"/>

                    <TextView
                        android:id="@+id/alarmDetails"
                        style="@style/TextStyle.Secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/alarmSwitch"
                        android:layout_centerVertical="true"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/alarmSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:backgroundTint="@color/parent_colorPrimary"
                        android:contentDescription="@string/set_reminder_toggle"/>
                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

        <com.instructure.pandautils.views.CanvasWebView
            android:id="@+id/eventWebView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calendarView"
            android:visibility="gone"
            android:layout_margin="8dp"/>

    </RelativeLayout>

</RelativeLayout>
